crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: import Main junk
---
nash::syntax

  × Invalid import declaration.
   ╭─[src/Main.nash:1:13]
 1 │ import Main junk
   ·             ─
   ╰────
  help: Write `import Module`, optionally followed by `as Alias` and `exposing (names)`.
