crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_exposing.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED IMPORT

  × I am partway through parsing an import, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Here are some examples of valid `import` declarations:

            import Cardano.Tx
            import Cardano.Tx as Tx
            import Cardano.Tx as Tx exposing (..)
            import Data.Decoder exposing (decode)

        You are probably trying to import a different module, but try to make it look
        like one of these examples!
