crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_exposing_list.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: import Main exposing x
---
nash::syntax

  × Expected `(` after `exposing`.
   ╭─[src/Main.nash:1:22]
 1 │ import Main exposing x
   ·                      ─
   ╰────
  help: Enclose the exposed names in parentheses.
