crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_indent_alias.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "import Main as\nAlias"
---
nash::syntax

  × Expected an alias after `as`.
   ╭─[src/Main.nash:2:1]
 1 │ import Main as
 2 │ Alias
   · ─
   ╰────
  help: Use an uppercase alias, as in `import Cardano.Tx as Tx`.
