crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_indent_exposing_list.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED IMPORT

  × I was parsing an `import` until I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see the list of exposed values next.

            import Data.Decoder exposing (..)
            import Data.Decoder exposing (decode)

        I generally recommend the second style. It is more explicit, making it much
        easier to figure out where values are coming from in large projects!
