crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_indent_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "import\nMain"
---
nash::syntax

  × Expected a module name after `import`.
   ╭─[src/Main.nash:2:1]
 1 │ import
 2 │ Main
   · ─
   ╰────
  help: Use an uppercase module name.
