crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a module name after `import`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Use an uppercase module name.
