crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_import_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "import "
---
nash::syntax

  × Invalid import declaration.
   ╭─[src/Main.nash:1:8]
 1 │ import 
   ·        ─
   ╰────
  help: Write `import Module`, optionally followed by `as Alias` and `exposing (names)`.
