crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_infix.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Invalid infix declaration.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `infix left 5 (++) = append`, with precedence from 0 to 9.
