crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was parsing a `module` declaration until I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see the module name next, like in these examples:

            module Dict exposing (..)
            module Option exposing (..)
            module Cardano.Tx exposing (..)
            module Data.Decoder exposing (..)

        Notice that the module names all start with capital letters. That is required!
