crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_problem.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Incomplete module declaration.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `module Name exposing (..)`.
